--- a/index.html
+++ b/index.html
@@ -5,3 +5,20 @@
 <title>Good talk.</title>
 </head>
 	
+<body>
+
+<h1>
+	Frixeon's Website - <script> document.write(new Date().toLocaleDateString()); </script>
+</h1>
+
+<p>
+
+Here's what I'm listening to rn...
+
+<iframe width="420" height="360" src="https://www.youtube.com/embed/xZtBZXYL0i8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+</p>
+
+
+</body>
+</html>
