--- a/index.html
+++ b/index.html
@@ -1,23 +1,240 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-<title>Good talk.</title>
-</head>
-	
 <body>
 
-<h1>
-	Frixeon's Website - <script> document.write(new Date().toLocaleDateString()); </script>
+<h1>Frixeon's Website - <script> document.write(new Date().toLocaleDateString()); </script>
 </h1>
 
-<p>
 
-Here's what I'm listening to rn...
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+body {
+  background-color: #b5b5b5;
+  color: #333333;
+}
+.masonry-wrapper {
+  padding: 1.5em;
+  max-width: 960px;
+  margin-right: auto;
+  margin-left: auto;
+}
+.masonry {
+  display: grid;
+  grid-template-columns: repeat(1, minmax(100px,1fr));
+  grid-gap: 10px;
+  grid-auto-rows: 0;
+}
+@media only screen and (max-width: 1023px) and (min-width: 768px) {
+  .masonry {
+    grid-template-columns: repeat(2, minmax(100px,1fr));
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .masonry {
+    grid-template-columns: repeat(3, minmax(100px,1fr));
+  }
+}
+.masonry-item, .masonry-content {
+  border-radius: 4px;
+  overflow: hidden;
+}
+.masonry-item {
+  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, .3));
+  transition: filter .25s ease-in-out;
+}
+.masonry-item:hover {
+  filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, .3));
+}
+.masonry-content {
+  overflow: hidden;
+}
+.masonry-item {
+  color: #111111;
+  background-color: #fafafa;
+}
+.masonry-title, .masonry-description {
+  margin: 0;
+}
+.masonry-title {
+  font-weight: 700;
+  font-size: 1.1rem;
+  padding: 1rem 1.5rem;
+}
+.masonry-description {
+  padding: 1.5rem;
+  font-size: .75rem;
+  border-top: 1px solid rgba(0, 0, 0, .05);
+}
+.masonry-footer {
+  font-size: .75em;
+  opacity: .25;
+  text-align: center;
+  padding-top: 3em; 
+  padding-bottom: 3em;
+  margin-bottom: -1.5em;
+  transition: opacity 1s ease-in-out;
+}
+.masonry-footer a {
+  color: currentColor;
+}
+.masonry-footer:hover, .masonry-footer:active, .masonry-footer:focus {
+  opacity: .75;
+}
+  </style>
+</head>
+<body>
+  <div class="masonry-wrapper"><div class="masonry">
+  <div class="masonry-item">
+    <div class="masonry-content">
+       <img src="Sandworm%20and%20Fleur%20De%20Lis.jpg">
+    </div>
+  </div>
+  <div class="masonry-item">
+    <div class="masonry-content">
 
-<iframe width="420" height="360" src="https://www.youtube.com/embed/xZtBZXYL0i8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<iframe width="420" height="360" src="https://www.youtube.com/embed/xZtBZXYL0i8" frameborder="0" 	allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+     <h3 class="masonry-title">What I'm listening to...</h3>
 
-</p>
+    </div>
+  </div>
+  <div class="masonry-item">
+    <div class="masonry-content">
+      2
+    </div>
+  </div>
+  <div class="masonry-item">
+    <div class="masonry-content">
+      3
+    </div>
+  </div>
+  <div class="masonry-item">
+    <div class="masonry-content">
+     4
+    </div>
+  </div>
+  <div class="masonry-item">
+    <div class="masonry-content">
+      5
+    </div>
+  </div>
+  <div class="masonry-item">
+    <div class="masonry-content">
+      6
+    </div>
+  </div>
+  <div class="masonry-item">
+    <div class="masonry-content">
+      <img src="https://picsum.photos/450/400?image=700" alt="Dummy Image">
+      <h3 class="masonry-title">Molestiae quod consectetur enim modi unde expedita dicta placeat?</h3>
+      <p class="masonry-description">Aliquam laudantium mollitia quo sint maxime omnis repellendus beatae. Consequuntur molestias odio sapiente. Officia minima, nisi! Tempora vero, architecto ducimus animi nostrum nobis aliquid eligendi illo, facilis temporibus.</p>
+    </div>
+  
+  </div>
+</div>
+<div class="masonry-footer">
+  <p>Created with &#10084; with <a href="//w3bits.com/tools/masonry-generator/" target="_blank" rel="external noopener nofollow">CSS Masonry Generator</a></p>
+</div>  </div>  <script src="//unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+  <script>
+/**
+ * Set appropriate spanning to any masonry item
+ *
+ * Get different properties we already set for the masonry, calculate 
+ * height or spanning for any cell of the masonry grid based on its 
+ * content-wrapper's height, the (row) gap of the grid, and the size 
+ * of the implicit row tracks.
+ *
+ * @param item Object A brick/tile/cell inside the masonry
+ * @link https://w3bits.com/css-grid-masonry/
+ */
+function resizeMasonryItem(item){
+  /* Get the grid object, its row-gap, and the size of its implicit rows */
+  var grid = document.getElementsByClassName('masonry')[0];
+  if( grid ) {
+    var rowGap = parseInt(window.getComputedStyle(grid).getPropertyValue('grid-row-gap')),
+        rowHeight = parseInt(window.getComputedStyle(grid).getPropertyValue('grid-auto-rows')),
+        gridImagesAsContent = item.querySelector('img.masonry-content');
+
+    /*
+     * Spanning for any brick = S
+     * Grid's row-gap = G
+     * Size of grid's implicitly create row-track = R
+     * Height of item content = H
+     * Net height of the item = H1 = H + G
+     * Net height of the implicit row-track = T = G + R
+     * S = H1 / T
+     */
+    var rowSpan = Math.ceil((item.querySelector('.masonry-content').getBoundingClientRect().height+rowGap)/(rowHeight+rowGap));
+
+    /* Set the spanning as calculated above (S) */
+    item.style.gridRowEnd = 'span '+rowSpan;
+    if(gridImagesAsContent) {
+      item.querySelector('img.masonry-content').style.height = item.getBoundingClientRect().height + "px";
+    }
+  }
+}
+
+/**
+ * Apply spanning to all the masonry items
+ *
+ * Loop through all the items and apply the spanning to them using 
+ * `resizeMasonryItem()` function.
+ *
+ * @uses resizeMasonryItem
+ * @link https://w3bits.com/css-grid-masonry/
+ */
+function resizeAllMasonryItems(){
+  // Get all item class objects in one list
+  var allItems = document.querySelectorAll('.masonry-item');
+
+  /*
+   * Loop through the above list and execute the spanning function to
+   * each list-item (i.e. each masonry item)
+   */
+  if( allItems ) {
+    for(var i=0;i>allItems.length;i++){
+      resizeMasonryItem(allItems[i]);
+    }
+  }
+}
+
+/**
+ * Resize the items when all the images inside the masonry grid 
+ * finish loading. This will ensure that all the content inside our
+ * masonry items is visible.
+ *
+ * @uses ImagesLoaded
+ * @uses resizeMasonryItem
+ * @link https://w3bits.com/css-grid-masonry/
+ */
+function waitForImages() {
+  //var grid = document.getElementById("masonry");
+  var allItems = document.querySelectorAll('.masonry-item');
+  if( allItems ) {
+    for(var i=0;i<allItems.length;i++){
+      imagesLoaded( allItems[i], function(instance) {
+        var item = instance.elements[0];
+        resizeMasonryItem(item);
+        console.log("Waiting for Images");
+      } );
+    }
+  }
+}
+
+/* Resize all the grid items on the load and resize events */
+var masonryEvents = ['load', 'resize'];
+masonryEvents.forEach( function(event) {
+  window.addEventListener(event, resizeAllMasonryItems);
+} );
+
+/* Do a resize once more when all the images finish loading */
+waitForImages();  
+</script>
+</body>
+</html>
 
 
 </body>
