--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 
 <!DOCTYPE html>
 <html>
+	<link href="StyleSheet.css" rel="stylesheet">
 <body>
 
 <h1>Frixeon's Website - <script> document.write(new Date().toLocaleDateString()); </script>
 </h1>
 
 
-<!doctype html>
-<html>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
