--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 
 <!DOCTYPE html>
 <html>
-	<link href="StyleSheet.css" rel="stylesheet">
+<link href="StyleSheet.css" rel="stylesheet">
 <body>
-
-<h1>Frixeon's Website - <script> document.write(new Date().toLocaleDateString()); </script>
+<h1>
+	Frixeon's Website - <script> document.write(new Date().toLocaleDateString()); </script>
 </h1>
-
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
