--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 
 <!DOCTYPE html>
 <html>
-<link href="StyleSheet.css" rel="stylesheet">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="StyleSheet.css" rel="stylesheet">
+</head>
+<link src="StyleSheet.css" rel="stylesheet">
 <body>
 <h1>
 	Frixeon's Website - <script> document.write(new Date().toLocaleDateString()); </script>
 </h1>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-</head>
 <body>
   <div class="masonry-wrapper"><div class="masonry">
   <div class="masonry-item">
