--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="StyleSheet.css" rel="stylesheet">
 </head>
-<link src="StyleSheet.css" rel="stylesheet">
+<link href="StyleSheet.css" rel="stylesheet">
 <body>
 <h1>
 	Frixeon's Website - <script> document.write(new Date().toLocaleDateString()); </script>
