--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="StyleSheet.css" rel="stylesheet">
+  <link href="StyleSheet.css" rel="stylesheet"/>
 </head>
 <body>
 <h1>
