--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
 	Frixeon's Website - <script> document.write(new Date().toLocaleDateString()); </script>
 </h1>
 <body>
-  <div class="masonry-wrapper"><div class="masonry">
   <div class="masonry-item">
     <div class="masonry-content">
-       <img src="Sandworm%20and%20Fleur%20De%20Lis.jpg">
+       <img width="600" height="600" src="Sandworm%20and%20Fleur%20De%20Lis.jpg">
     </div>
   </div>
   <div class="masonry-item">
     <div class="masonry-content">
 
-	<iframe width="420" height="360" src="https://www.youtube.com/embed/xZtBZXYL0i8" frameborder="0" 	allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<iframe width="100%" height="100%" src="https://www.youtube.com/embed/xZtBZXYL0i8" frameborder="0" 	allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
      <h3 class="masonry-title">What I'm listening to...</h3>
 
     </div>
