--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
   <div class="masonry-item">
     <div class="masonry-content">
-       <img width="600" height="600" src="Sandworm%20and%20Fleur%20De%20Lis.jpg">
+       <img src="Sandworm%20and%20Fleur%20De%20Lis.jpg">
     </div>
   </div>
   <div class="masonry-item">
     <div class="masonry-content">
 
-	<iframe width="600" height="600" src="https://www.youtube.com/embed/xZtBZXYL0i8" frameborder="0" 	allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<iframe width="500" height="500" src="https://www.youtube.com/embed/xZtBZXYL0i8" frameborder="0" 	allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
      <h3 class="masonry-title">What I'm listening to...</h3>
 
     </div>
