--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="stylesheet.css" rel="stylesheet"/>
+  <link href="stylesheet.css" rel="stylesheet">
 </head>
 <body>
 <h1>
@@ -12,15 +12,17 @@
 </h1>
 <body>
   <div class="masonry-item">
-    <div class="masonry-content">
-       <img src="Sandworm%20and%20Fleur%20De%20Lis.jpg">
+    <div class="masonry-content">  
+      <img width="500" height="500" src="Sandworm Fleur De Lis.jpg">
+      <h3 class="masonry-title">What is this site?</h3>
+      <p class="masonry-description">Insert cool description of website</p>
     </div>
   </div>
   <div class="masonry-item">
     <div class="masonry-content">
-
+	<h3 class="masonry-title">What I'm listening to...</h3>
 	<iframe width="500" height="500" src="https://www.youtube.com/embed/xZtBZXYL0i8" frameborder="0" 	allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-     <h3 class="masonry-title">What I'm listening to...</h3>
+   
 
     </div>
   </div>
