--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="masonry-item">
     <div class="masonry-content">  
-      <img width="500" height="500" src="Sandworm Fleur De Lis.jpg">
+      <img width="500" height="500" src="Sandworm%20and%20Fleur%20De%20Lis.jpg"
       <h3 class="masonry-title">What is this site?</h3>
       <p class="masonry-description">Insert cool description of website</p>
     </div>
