--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </h1>
 <body>
   <div class="masonry-item">
-    <div class="masonry-content">  
+    <div class="masonry-content">
+      <h3 class="masonry-title">What is this site?</h3>
+      <p class="masonry-description">Insert cool description of website</p>
       <img width="500" height="500" src="Sandworm%20and%20Fleur%20De%20Lis.jpg"
       <h3 class="masonry-title">What is this site?</h3>
       <p class="masonry-description">Insert cool description of website</p>
