--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <h3 class="masonry-title">What is this site?</h3>
       <p class="masonry-description">Insert cool description of website</p>
       <img width="500" height="500" src="Sandworm%20and%20Fleur%20De%20Lis.jpg"
-      <h3 class="masonry-title">What is this site?</h3>
-      <p class="masonry-description">Insert cool description of website</p>
+      <h3 class="masonry-title"></h3>
+      <p class="masonry-description"></p>
     </div>
   </div>
   <div class="masonry-item">
