--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <div class="masonry-item">
     <div class="masonry-content">
 	<h3 class="masonry-title">What I'm listening to...</h3>
+	    <p class="masonry-description"> Portuguese trap. Pretty amazing.</p>
 	<iframe width="500" height="500" src="https://www.youtube.com/embed/xZtBZXYL0i8" frameborder="0" 	allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
    
 
