--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 <div class="grid-container">
 
-  <div class="grid-item">
-  <br>
-  <img width="500" height="500" src="Sandworm%20and%20Fleur%20De%20Lis.jpg">
+  <div class="grid-item-image">
+  
+  <img width="500" src="Sandworm%20and%20Fleur%20De%20Lis.jpg">
   </div>
   
   <div class="grid-item1">
@@ -28,28 +28,32 @@
   </div>
   
   <div class="grid-item">
-  3
+  This is a test to see how my columns resize depending on other content on other columns.
   </div>  
   
-  <div class="grid-item">
-  4
+  <div class="grid-item-text1">
+  Human life. <br>
+Duration: momentary. Nature: changeable. Perception:
+dim. Condition of Body: decaying. <br> Soul: spinning around.
+Fortune: unpredictable. Lasting Fame: uncertain. <br> Sum Up:
+The body and its parts are a river, the soul a dream and
+mist, life is warfare and a journey far from home, lasting
+reputation is oblivion.
+
   </div>
    
   <div class="grid-item">
-  4
+  Made by Frixeon.
   </div>
   
    <div class="grid-item">
-  4
+  <a href="page1.html">page 1</a>
   </div>
   
    <div class="grid-item">
-  4
+  <a href="page2.html">page 2</a>
   </div>
-  
-   <div class="grid-item">
-  4
-  </div>
+ 
   
   
   
