--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
   <div class="grid-item1">
   Currently listening to: <br>
-  <iframe width="500" height="500" src="https://www.youtube.com/watch?v=waAlgFq9Xq8&list=RDwaAlgFq9Xq8" frameborder="0" 	allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="500" height="500" src="https://www.youtube.com/embed/waAlgFq9Xq8?list=RDwaAlgFq9Xq8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   
   <div class="grid-item">
