--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
   <div class="grid-item1">
   Currently listening to: <br>
-  <iframe width="700" height="500" src="https://www.youtube.com/embed/waAlgFq9Xq8?list=RDwaAlgFq9Xq8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="700" height="500" src="https://music.youtube.com/playlist?list=RDCLAK5uy_lfdqtxP4-HS8FDB-ElfoPtiCRHYI6x49M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   
   <div class="grid-item">
