--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<h1>Frixeon's Website - <script> document.write(new Date().toLocaleDateString()); </script> </h1>
+<h1>Test - <script> document.write(new Date().toLocaleDateString()); </script> </h1>
 
 <p> Welcome to my website. I don't know what I'm doing with this or with html in general. Here's some stuff...</p>
 
@@ -24,26 +24,20 @@
   
   <div class="grid-item1">
   Currently listening to: <br>
-  <iframe width="700" height="500" src="https://music.youtube.com/playlist?list=RDCLAK5uy_lfdqtxP4-HS8FDB-ElfoPtiCRHYI6x49M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="700" height="500" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   
   <div class="grid-item">
-  This is a test to see how my columns resize depending on other content on other columns.
+ 
   </div>  
   
   <div class="grid-item-text1">
   Human life. <br>
-Duration: momentary. Nature: changeable. Perception:
-dim. Condition of Body: decaying. <br> Soul: spinning around.
-Fortune: unpredictable. Lasting Fame: uncertain. <br> Sum Up:
-The body and its parts are a river, the soul a dream and
-mist, life is warfare and a journey far from home, lasting
-reputation is oblivion.
 
   </div>
    
   <div class="grid-item">
-  Made by Frixeon.
+ 
   </div>
   
    <div class="grid-item">
