--- a/index.html
+++ b/index.html
@@ -7,22 +7,46 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="writinghome.html">Writing</a></li>
-    <li><a href="about.html">About Me</a></li>
-  </ul>
-  <header>
-    <h1>Thoughts and Ruminations</a></h1>
-  </header>
-  <main>
-    <section class="text">
-      <p>So, what is this website even about?</p>
-    </section>
+<div class="header">
+	<h1>Thoughts and Ruminations</h1>
+	<p></p>
+	</div>
+
+<div class="topnav">
+  <a href="#">Home</a>
+  <a href="/writings/">Writings</a>
+  <a href="about.html" style="float:right">About Me</a>
+</div>
+
+<div class="row">
+  <div class="leftcolumn">
+    <div class="card">
+      <h2>Blog 1</h2>
+      <h5>Description</h5>
+      <p>Some text..</p>
+    </div>
+    <div class="card">
+      <h2>Blog 2</h2>
+      <h5>Description</h5>
+      <p>Some text..</p>
+    </div>
+  </div>
+  <div class="rightcolumn">
+    <div class="card">
+      <h2>Recent Posts</h2>
+      <a href="#">Blog 1</a>
+    </div>
    
-  </main>
-  <footer>
-    <p>&copy; <?php echo date("Y"); ?> Kail McMillan, with the help of Google Gemini and many, many, helpful online articles</p>
-  </footer>
+    <div class="card">
+      <h3>Follow Me</h3>
+      <p>Some text..</p>
+    </div>
+  </div>
+</div>
+
+<div class="footer">
+  <h2>Footer</h2>
+</div>
+
 </body>
 </html>
