--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <div class="topnav">
   <a href="#">Home</a>
-  <a href="/Writings/index.html">Writings</a>
+  <a href="frixeon.com/writing/writings.html">Writings</a>
   <a href="about.html" style="float:right">About Me</a>
 </div>
 
