--- a/Writing/Writings.html
+++ b/Writing/Writings.html
@@ -13,8 +13,8 @@
 	</div>
 
 <div class="topnav">
-  <a href="#">Home</a>
-  <a href="/Writings/index.html">Writings</a>
+  <a href="index.html">Home</a>
+  <a href="/Writings/Writings.html">Writings</a>
   <a href="about.html" style="float:right">About Me</a>
 </div>
 
