--- a/about.html
+++ b/about.html
@@ -3,23 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Me</title>
+  <title>About Me!</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<ul>
-  <li><a href="index.html">Home</a></li>
-  <li><a href="writinghome.html">Writing</a></li>
-  <li><a href="about.html">About Me</a></li>
-</ul>
-  <header>
-    <h1>About Me</a></h1>
-  </header>
-  <main>
-      <p>This website was created by Kail McMillan, with no real experience whatsoever, but I will try to flesh it out and begin to write things... eventually.</p>
-  </main>
-  <footer>
-    <p>&copy; <?php echo date("Y"); ?> Kail McMillan, with the help of Google Gemini and many, many, helpful online articles</p>
-  </footer>
+<div class="header">
+	<h1>About Me</h1>
+	<p></p>
+	</div>
+
+<div class="topnav">
+  <a href="index.html">Home</a>
+  <a href="/Writing/Writings.html">Writings</a>
+  <a href="about.html" style="float:right">About Me</a>
+</div>
+
+<div class="row">
+  <div class="leftcolumn">
+    <div class="card">
+      <h2>On the Creator</h2>
+      <p>I'm Kail. Also known online as Frixeon. </p>
+    </div>
+   </div>
+  </div>
+  <div class="rightcolumn">
+   
+    <div class="card">
+      <h3>Follow Me</h3>
+      <p>TBD!</p>
+    </div>
+  </div>
+</div>
+
+<div class="footer">
+  <h2>Created by Kail McMillan. All rights reserved (?) </h2>
+</div>
+
 </body>
 </html>
