--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="header">
 	<h1>Thoughts and Ruminations</h1>
-	<p></p>
+	<p>A collection of thoughts, miscellaneous blog posts, and an HTML playground... I'm misguided just enough to believe others care about my opinions. </p>
 	</div>
 
 <div class="topnav">
