--- a/Writing/Writings.html
+++ b/Writing/Writings.html
@@ -13,7 +13,7 @@
 	</div>
 
 <div class="topnav">
-  <a href="index.html">Home</a>
+  <a href="https://frixeon.com/index.html">Home</a>
   <a href="/Writings/Writings.html">Writings</a>
   <a href="about.html" style="float:right">About Me</a>
 </div>
