--- a/Writing/Writings.html
+++ b/Writing/Writings.html
@@ -31,12 +31,12 @@
       <p>Some text..</p>
     </div>
   </div>
-  
+   <div class="rightcolumn">	
     <div class="card">
       <h3>Follow Me</h3>
       <p>Some text..</p>
     </div>
-  </div>
+   </div>
 </div>
 
 <div class="footer">
