--- a/Writing/Writings.html
+++ b/Writing/Writings.html
@@ -15,7 +15,7 @@
 <div class="topnav">
   <a href="https://frixeon.com/index.html">Home</a>
   <a href="https:/frixeon.com/Writing/Writings.html">Writings</a>
-  <a href="about.html" style="float:right">About Me</a>
+  <a href="https://frixeon.com/about.html" style="float:right">About Me</a>
 </div>
 
 <div class="row">
