--- a/Writing/Writings.html
+++ b/Writing/Writings.html
@@ -4,17 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>frixeon.com</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="writemain.css">
 </head>
 <body>
 <div class="header">
-	<h1>Thoughts and Ruminations</h1>
-	<p></p>
+	<h1>Thoughts and Ruminations - Writings</h1>
 	</div>
 
 <div class="topnav">
   <a href="https://frixeon.com/index.html">Home</a>
-  <a href="https:/frixeon.com/Writing/Writings.html">Writings</a>
+  <a href="Writings.html">Writings</a>
   <a href="https://frixeon.com/about.html" style="float:right">About Me</a>
 </div>
 
