--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <div class="topnav">
   <a href="index.html">Home</a>
-  <a href="/Writing/Writings.html">Writings</a>
+  <a href="./Writing/Writings.html">Writings</a>
   <a href="about.html" style="float:right">About Me</a>
 </div>
 
